# InfoGrid

./: alembic.ini  pyproject.toml
infogrid/: app.py  database.py  models.py  schemas.py  settings.py
infogrid/routers/: coluna.py  colunatopicoKafka.py  entidades.py  registroacesso.py  relacionamentos.py  responsavel.py  routerdatabase.py  tabela.py  topicokafka.py  usuario.py
migrations/: env.py
migrations/versions/: 0bbf3875f68b_create_tables_infogrid.py  77d3f580878a_adicionando_atributos_em_database_e_.py  7e6e310343b5_auto_incremento_no_indexs.py  8287b2bbaafb_colocando_novas_colunas.py  c82eb372e4f5_mudando_classe_registroacesso.py  dc3ea16a073b_ajustando_model.py
tests/: test_app.py
