[project]
name = "infogrid"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Goncalves",email = "rafagomes53@alu.ufc.br"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.4,<3.0.0)",
    "sqlalchemy (>=2.0.36,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pymongo (>=4.11,<5.0)",
    "motor (>=3.7.0,<4.0.0)",
    "beanie (>=1.29.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 790
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev infogrid/app.py'
pre_test = 'task lint'
test = 'pytest --cov=infogrid -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'